Updated file from VS code export

--- a/Sprint 3 Data.html
+++ b/Sprint 3 Data.html
@@ -8683,8 +8683,8 @@ FairlyActiveMinutes   int                    The number of fairly ac
 LightlyActiveMinutes int                    The number of lightly active minutes the user had during the logged day <br/>
 SedentaryMinutes     float              The number of sedentary minutes the user had during the logged day <br/>
 Calories                         float                   The total number of calories the user burned throughout the logged day <br/>
-Activity Calories         float                The number of calories the user burned during exercise on the logged day     <br/></p>
-<p>Note** "Very Active:, "Fairly Active", "Lightly Active", and "Sedentary" minutes are categorized by Fitbit metrics</p>
+ActivityCalories          float                The number of calories the user burned during exercise on the logged day     <br/></p>
+<p>Note** "Very Active", "Fairly Active", "Lightly Active", and "Sedentary" minutes are categorized by Fitbit metrics</p>
 </div>
 </div>
 </div>
